change the produk hukum

--- a/produk.html
+++ b/produk.html
@@ -4,15 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Jabatan Fungsional pengawas JPH</title>
+  <title>Jabatan Fungsional Pengawas JPH</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-
+  
 
   <!-- Favicons -->
   <link href="assets/img/logo_primary_purple.png" rel="icon">
-  
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -20,38 +18,50 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <style>
+    /* Navbar scroll effect */
+    .header {
+      background-color: transparent;
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+      padding: 10px 20px;
+    }
+
+    .header.scrolled {
+      background-color: #ffffff; /* Latar belakang putih */
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Bayangan lembut */
+    }
+  </style>
 </head>
 
 <body class="index-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
+  <header id="header" class="header d-flex align-items-center fixed-top" data-aos="fade-down">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo1.png" alt="">
-        <!-- <h1 class="sitename">Pengawasan JPH</h1> -->
+        <img src="assets/img/logo1.png" alt="Logo">
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Beranda<br></a></li>
-          <li><a href="produk.html"class="active">Produk Hukum</a></li>
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="produk.html" class="active">Produk Hukum</a></li>
           <li><a href="#services">Data</a></li>
-          <li class="dropdown"><a href="#"><span>Informasi dan Layanan</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown">
+            <a href="#"><span>Informasi dan Layanan</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Pengumuman</a></li>
               <li><a href="#">Inpassing</a></li>
-              <li><a href="#">Tata Cara Perhitungan Kebutuhan Jabatan Fungsional Pengawasan JPH</a></li>
-              <li><a href="#">Rekomendasi Formasi Jabatan Fungsional Pengawasan JPH</a></li>
+              <li><a href="#">Tata Cara Perhitungan Kebutuhan Jabatan</a></li>
+              <li><a href="#">Rekomendasi Formasi Jabatan</a></li>
               <li><a href="#">Diklat</a></li>
             </ul>
           </li>
@@ -64,16 +74,12 @@
 
     </div>
   </header>
-  
+  <br><br><br>
 
-  <main class="main">
-
-
-<br> <br> <br>
-  <main class="container py-5">
+  <main class="main container py-5">
     <div class="row">
       <!-- Sidebar Kategori -->
-      <div class="col-lg-3">
+      <div class="col-lg-3" data-aos="fade-right">
         <h2 class="mb-4">Kategori Produk</h2>
         <ul class="list-group" id="kategori-list">
           <!-- Kategori akan dimuat dari JSON -->
@@ -81,9 +87,9 @@
       </div>
 
       <!-- Konten Utama -->
-      <div class="col-lg-9">
+      <div class="col-lg-9" data-aos="fade-up">
         <h2 class="mb-4">Hasil dari Semua Kategori</h2>
-        <table class="table table-striped">
+        <table class="table table-striped" data-aos="zoom-in">
           <tbody id="data-list">
             <!-- Data produk hukum akan dimuat dari JSON -->
           </tbody>
@@ -92,13 +98,42 @@
     </div>
   </main>
 
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+
+  <!-- Main JS File -->
   <script>
+    // Mobile Navigation Toggle
+const mobileNavToggle = document.querySelector('.mobile-nav-toggle');
+const navMenu = document.querySelector('.navmenu ul');
+
+mobileNavToggle.addEventListener('click', () => {
+  navMenu.classList.toggle('active');
+});
+
+    // Inisialisasi AOS (Animate On Scroll)
+    AOS.init({
+      duration: 1000,
+      once: true,
+      easing: 'ease-in-out',
+    });
+
+    // Header scroll effect
+    window.addEventListener('scroll', function () {
+      const header = document.querySelector('#header');
+      header.classList.toggle('scrolled', window.scrollY > 50); // Menambahkan kelas scrolled jika scrollY > 50
+    });
+
+    // Fetch data dan populate kategori dan items
     async function fetchData() {
       try {
         const response = await fetch('data.json');
         if (!response.ok) throw new Error('Gagal mengambil data JSON');
         const data = await response.json();
-  
+
         // Tampilkan kategori
         const kategoriList = document.getElementById('kategori-list');
         kategoriList.innerHTML = data.kategori
@@ -107,15 +142,15 @@
               ${k.name}
             </li>
           `)
-          .join('');
-  
+          .join(''); 
+
         // Tampilkan semua item secara default
         displayItems(data.items);
       } catch (error) {
         console.error('Error:', error);
       }
     }
-  
+
     function filterByCategory(categoryName) {
       fetch('data.json')
         .then(response => {
@@ -128,7 +163,7 @@
         })
         .catch(error => console.error('Error:', error));
     }
-  
+
     function displayItems(items) {
       const dataList = document.getElementById('data-list');
       dataList.innerHTML = items
@@ -152,7 +187,7 @@
         `)
         .join('');
     }
-  
+
     window.onload = fetchData;
   </script>
 </body>
