--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
   <!-- Favicons -->
   <link href="assets/img/logo_primary_purple.png" rel="icon">
-  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -52,7 +54,8 @@
           <li><a href="index.html" class="active">Beranda<br></a></li>
           <li><a href="produk.html">Produk Hukum</a></li>
           <li><a href="#services">Data</a></li>
-          <li class="dropdown"><a href="#"><span>Informasi dan Layanan</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="#"><span>Informasi dan Layanan</span> <i
+                class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Pengumuman</a></li>
               <li><a href="#">Inpassing</a></li>
@@ -70,7 +73,7 @@
 
     </div>
   </header>
-  
+
 
   <main class="main">
 
@@ -103,8 +106,12 @@
               <h3>Profil Singkat</h3>
               <h2>Jabatan Fungsional Pengawas JPH</h2>
               <p>
-                Pengawas Jaminan Produk Halal (JPH) adalah jabatan fungsional yang bertugas memastikan produk yang beredar memenuhi standar kehalalan sesuai syariat Islam. Pengawasan ini dilakukan untuk melindungi konsumen Muslim dan mendukung penerapan Sistem Jaminan Halal secara nasional.
-Sebagai bagian dari Badan Penyelenggara Jaminan Produk Halal (BPJPH), Pengawas JPH berperan dalam melakukan inspeksi, pembinaan, dan edukasi kepada pelaku usaha serta masyarakat. Kami juga bekerja sama dengan lembaga terkait dalam memastikan produk yang beredar aman, berkualitas, dan halal.
+                Pengawas Jaminan Produk Halal (JPH) adalah jabatan fungsional yang bertugas memastikan produk yang
+                beredar memenuhi standar kehalalan sesuai syariat Islam. Pengawasan ini dilakukan untuk melindungi
+                konsumen Muslim dan mendukung penerapan Sistem Jaminan Halal secara nasional.
+                Sebagai bagian dari Badan Penyelenggara Jaminan Produk Halal (BPJPH), Pengawas JPH berperan dalam
+                melakukan inspeksi, pembinaan, dan edukasi kepada pelaku usaha serta masyarakat. Kami juga bekerja sama
+                dengan lembaga terkait dalam memastikan produk yang beredar aman, berkualitas, dan halal.
               </p>
             </div>
           </div>
@@ -116,71 +123,19 @@ Sebagai bagian dari Badan Penyelenggara Jaminan Produk Halal (BPJPH), Pengawas J
     </section><!-- /About Section -->
   </main>
 
-  <footer id="footer" class="footer">
-
-    <div class="container footer-top">
-      <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="d-flex align-items-center">
-            <span class="sitename">FlexStart</span>
-          </a>
-          <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
-          </div>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-4 col-md-12">
-          <h4>Follow Us</h4>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
-          <div class="social-links d-flex">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-    <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">FlexStart</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
-      </div>
-    </div>
-
-  </footer>
+  <div id="footer"></div>
+  <script>
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('footer').innerHTML = data;
+      })
+      .catch(error => console.error('Error loading footer:', error));
+  </script>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -191,6 +146,47 @@ Sebagai bagian dari Badan Penyelenggara Jaminan Produk Halal (BPJPH), Pengawas J
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    document.getElementById('submitBtn').addEventListener('click', function () {
+      const name = document.getElementById('name').value.trim();
+      const phone = document.getElementById('phone').value.trim();
+      const message = document.getElementById('message').value.trim();
+
+      let isValid = true;
+
+      if (!name) {
+        document.getElementById('nameError').textContent = 'Nama tidak boleh kosong';
+        isValid = false;
+      } else {
+        document.getElementById('nameError').textContent = '';
+      }
+
+      if (!phone) {
+        document.getElementById('phoneError').textContent = 'No HP tidak boleh kosong';
+        isValid = false;
+      } else {
+        document.getElementById('phoneError').textContent = '';
+      }
+
+      if (!message) {
+        document.getElementById('messageError').textContent = 'Pesan tidak boleh kosong';
+        isValid = false;
+      } else {
+        document.getElementById('messageError').textContent = '';
+      }
+
+      if (isValid) {
+        document.getElementById('successMessage').style.display = 'block';
+        setTimeout(() => {
+          document.getElementById('contactForm').reset();
+          document.getElementById('successMessage').style.display = 'none';
+        }, 3000);
+      }
+    });
+  </script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
