penambahan Page Anounce, Inpassing, TataCaraHitung

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
           <li class="dropdown"><a href="#"><span>Informasi dan Layanan</span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Pengumuman</a></li>
-              <li><a href="#">Inpassing</a></li>
-              <li><a href="#">Tata Cara Perhitungan Kebutuhan Jabatan Fungsional Pengawasan JPH</a></li>
+              <li><a href="pengumuman.html">Pengumuman</a></li>
+              <li><a href="inpassing.html">Inpassing</a></li>
+              <li><a href="hitung-kebutuhan-jabatan.html">Tata Cara Perhitungan Kebutuhan Jabatan Fungsional Pengawasan JPH</a></li>
               <li><a href="#">Rekomendasi Formasi Jabatan Fungsional Pengawasan JPH</a></li>
               <li><a href="#">Diklat</a></li>
             </ul>
