fix tata cara hitung

--- a/test.html
+++ b/test.html
@@ -79,7 +79,7 @@
 
     <section class="inner-page">
       <div class="container" data-aos="fade-up">
-        <h3>Prosedur Perhitungan</h3>
+        <h3>Prosedur Perhtiungan</h3>
         <p>
           Berikut adalah langkah-langkah untuk menghitung kebutuhan Jabatan Fungsional Pengawas JPH:
         </p>
@@ -88,9 +88,9 @@
           <li><strong>Penentuan Standar Waktu:</strong> Tentukan durasi waktu standar untuk menyelesaikan setiap tugas.</li>
           <li><strong>Penghitungan Volume Kerja:</strong> Hitung total volume kerja yang harus diselesaikan dalam periode tertentu.</li>
           <li><strong>Perhitungan Kebutuhan Pegawai:</strong> Gunakan rumus berikut:
-            <br><code>Kebutuhan Pegawai = Total Volume Kerja / Standar Waktu</code>
-        </li>
-        <li><strong>Evaluasi dan Validasi:</strong> Validasi hasil perhitungan dengan mempertimbangkan faktor-faktor eksternal seperti anggaran dan kebijakan organisasi.</li>
+               <br><code>Kebutuhan Pegawai = Total Volume Kerja / Standar Waktu</code>
+      </li>
+      <li><strong>Evaluasi dan Validasi:</strong> Validasi hasil perhitungan dengan mempertimbangkan faktor-faktor eksternal seperti anggaran dan kebijakan organisasi.</li>
         </ol>
 
         <h3>Dokumen yang Dibutuhkan</h3>
