--- a/hitung-kebutuhan-jabatan.html
+++ b/hitung-kebutuhan-jabatan.html
@@ -1,69 +1,135 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tata Cara Perhitungan Kebutuhan Jabatan Fungsional Pengawas JPH</title>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Inpassing - Jabatan Fungsional Pengawas JPH</title>
+  <meta name="description" content="Informasi Prosedur dan Dokumen yang Dibutuhkan untuk Inpassing">
+  <meta name="keywords" content="Inpassing, Jabatan Fungsional, Pengawas JPH, BPJPH">
+
+  <!-- Favicons -->
+  <link href="assets/img/logo_primary_purple.png" rel="icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      line-height: 1.6;
-    }
-    header {
-      background-color: #4CAF50;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-    main {
-      padding: 2rem;
-    }
-    footer {
-      background-color: #f1f1f1;
-      padding: 1rem;
-      text-align: center;
-      margin-top: 2rem;
-    }
-  </style>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+    rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
 </head>
+
 <body>
 
-<header>
-  <h1>Tata Cara Perhitungan Kebutuhan Jabatan Fungsional Pengawas JPH</h1>
-</header>
+  <!-- Header -->
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-<main>
-  <section>
-    <h2>Prosedur Perhitungan</h2>
-    <p>Berikut adalah langkah-langkah untuk menghitung kebutuhan Jabatan Fungsional Pengawas JPH:</p>
-    <ol>
-      <li><strong>Analisis Beban Kerja:</strong> Identifikasi seluruh tugas dan tanggung jawab yang harus dilakukan oleh pengawas JPH.</li>
-      <li><strong>Penentuan Standar Waktu:</strong> Tentukan durasi waktu standar untuk menyelesaikan setiap tugas.</li>
-      <li><strong>Penghitungan Volume Kerja:</strong> Hitung total volume kerja yang harus diselesaikan dalam periode tertentu.</li>
-      <li><strong>Perhitungan Kebutuhan Pegawai:</strong> Gunakan rumus berikut:
-        <br><code>Kebutuhan Pegawai = Total Volume Kerja / Standar Waktu</code>
+      <a href="index.html" class="logo d-flex align-items-center me-auto">
+        <img src="assets/img/logo1.png" alt="Logo">
+      </a>
+
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="produk.html">Produk Hukum</a></li>
+          <li><a href="#services">Data</a></li>
+          <li class="dropdown"><a href="#"><span>Informasi dan Layanan</span> <i
+                class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="pengumuman.html">Pengumuman</a></li>
+              <li><a href="inpassing.html" class="active">Inpassing</a></li>
+              <li><a href="hitung-kebutuhan-jabatan.html">Tata Cara Perhitungan</a></li>
+              <li><a href="#">Rekomendasi Formasi</a></li>
+              <li><a href="#">Diklat</a></li>
+            </ul>
+          </li>
+          <li><a href="#contact">Kontak</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
+
+      <a class="btn-getstarted flex-md-shrink-0" href="https://ringwas.halal.go.id/login">Login</a>
+
+    </div>
+  </header>
+
+  <!-- Main Content -->
+  <main id="main">
+    <section class="breadcrumbs">
+      <div class="container">
+        <ol>
+          <!-- <li><a href="index.html">Beranda</a></li> -->
+          <li>Inpassing</li>
+        </ol>
+        <h2>Tata cara perhitungan kebutuhan jabatan fungsional jabatan pengawas JPH</h2>
+      </div>
+    </section>
+
+    <section class="inner-page">
+      <div class="container" data-aos="fade-up">
+        <h3>Prosedur Perhtiungan</h3>
+        <p>
+          Berikut adalah langkah-langkah untuk menghitung kebutuhan Jabatan Fungsional Pengawas JPH:
+        </p>
+        <ol>
+          <li><strong>Analisis Beban Kerja:</strong> Identifikasi seluruh tugas dan tanggung jawab yang harus dilakukan oleh pengawas JPH.</li>
+          <li><strong>Penentuan Standar Waktu:</strong> Tentukan durasi waktu standar untuk menyelesaikan setiap tugas.</li>
+          <li><strong>Penghitungan Volume Kerja:</strong> Hitung total volume kerja yang harus diselesaikan dalam periode tertentu.</li>
+          <li><strong>Perhitungan Kebutuhan Pegawai:</strong> Gunakan rumus berikut:
+               <br><code>Kebutuhan Pegawai = Total Volume Kerja / Standar Waktu</code>
       </li>
       <li><strong>Evaluasi dan Validasi:</strong> Validasi hasil perhitungan dengan mempertimbangkan faktor-faktor eksternal seperti anggaran dan kebijakan organisasi.</li>
-    </ol>
-  </section>
+        </ol>
 
-  <section>
-    <h2>Dokumen yang Dibutuhkan</h2>
-    <p>Berikut adalah dokumen yang perlu disiapkan untuk mendukung proses perhitungan:</p>
-    <ul>
-      <li>Dokumen deskripsi tugas pengawas JPH.</li>
-      <li>Data historis beban kerja.</li>
-      <li>Laporan volume kerja sebelumnya.</li>
-      <li>Standar waktu kerja yang disetujui.</li>
-    </ul>
-  </section>
-</main>
+        <h3>Dokumen yang Dibutuhkan</h3>
+        <ul>
+            <li>Dokumen deskripsi tugas pengawas JPH.</li>
+            <li>Data historis beban kerja.</li>
+            <li>Laporan volume kerja sebelumnya.</li>
+            <li>Standar waktu kerja yang disetujui.</li>
+        </ul>
 
-<footer>
-  <p>&copy; 2024 BPJPH. Semua Hak Dilindungi.</p>
-</footer>
+        <p>Untuk informasi lebih lanjut, silakan hubungi <a href="#contact">kontak kami</a>.</p>
+      </div>
+    </section>
+  </main>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Footer -->
+  <div id="footer"></div>
+  <script>
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('footer').innerHTML = data;
+      })
+      .catch(error => console.error('Error loading footer:', error));
+  </script>
+
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+
+  <!-- Main JS File -->
+  <script src="assets/js/main.js"></script>
 </body>
+
 </html>
