--- a/pengumuman.html
+++ b/pengumuman.html
@@ -53,7 +53,7 @@
           <li class="dropdown">
             <a href="#"><span>Informasi dan Layanan</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="announcement.html" class="active">Pengumuman</a></li>
+              <li><a href="pengumuman.html" class="active">Pengumuman</a></li>
               <li><a href="#">Inpassing</a></li>
               <li><a href="#">Tata Cara Perhitungan Kebutuhan Jabatan</a></li>
               <li><a href="#">Rekomendasi Formasi Jabatan</a></li>
