--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <li><a href="#">Diklat</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Kontak</a></li>
+          <li><a href="kontak.html">Kontak</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -1189,89 +1189,147 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Contact Us</p>
-      </div><!-- End Section Title -->
+        <h2>Kontak</h2>
+        <p>Informasi Kontak</p>
+      <!-- Contact Section Start -->
+<div class="contact-section">
+  <div class="container">
+    <div class="row no-gutters">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
+      <!-- Left Section (Email and Contact Information) -->
+      <div class="col-lg-6">
         <div class="row gy-4">
+          <style>
+            .info-item {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+              text-align: center;
+              padding: 15px;
+              border: 1px solid #ddd;
+              border-radius: 8px;
+              background-color: #f9f9f9;
+              max-width: 400px;
+              margin: 0 auto;
+            }
 
-          <div class="col-lg-6">
+            .info-item i {
+              font-size: 1.75rem;
+              color: #6c63ff;
+              margin-bottom: 8px;
+            }
 
-            <div class="row gy-4">
-              <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="200">
-                  <i class="bi bi-geo-alt"></i>
-                  <h3>Address</h3>
-                  <p>A108 Adam Street</p>
-                  <p>New York, NY 535022</p>
-                </div>
-              </div><!-- End Info Item -->
+            .info-item h3 {
+              font-size: 1.1rem;
+              margin-bottom: 8px;
+            }
 
-              <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="300">
-                  <i class="bi bi-telephone"></i>
-                  <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
-                  <p>+1 6678 254445 41</p>
-                </div>
-              </div><!-- End Info Item -->
+            .info-item p {
+              margin: 0;
+              font-size: 0.9rem;
+            }
+          </style>
 
-              <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="400">
-                  <i class="bi bi-envelope"></i>
-                  <h3>Email Us</h3>
-                  <p>info@example.com</p>
-                  <p>contact@example.com</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="500">
-                  <i class="bi bi-clock"></i>
-                  <h3>Open Hours</h3>
-                  <p>Monday - Friday</p>
-                  <p>9:00AM - 05:00PM</p>
-                </div>
-              </div><!-- End Info Item -->
-
+          <!-- Email -->
+          <div class="col-12">
+            <div class="info-item" data-aos="fade" data-aos-delay="300">
+              <i class="bi bi-envelope"></i>
+              <h3>Email</h3>
+              <p>Email: layanan@kemenag.go.id</p>
             </div>
+          </div><!-- End Info Item -->
 
-          </div>
+          <!-- Hubungi Kami -->
+          <div class="col-12">
+            <div class="info-item" data-aos="fade" data-aos-delay="300">
+              <i class="bi bi-telephone"></i>
+              <h3>Telepon</h3>
+              <p>Telp: 146</p>
+              <p>Whatsapp: +62811-8010-3146</p>
+            </div>
+          </div><!-- End Info Item -->
 
-          <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-              <div class="row gy-4">
+        </div>
+      </div>
 
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-                </div>
+      <!-- Right Section (Google Maps) -->
+      <div class="col-lg-6">
+        <div class="maps-container" data-aos="fade" data-aos-delay="300">
+          <style>
+            .maps-container iframe {
+              width: 100%;
+              height: 420px;
+              border: 0;
+            }
+          </style>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.6347075636783!2d106.8836631!3d-6.2901396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f298e7dcf927%3A0x771c58a469b9969d!2sBadan%20Penyelenggara%20Jaminan%20Produk%20Halal!5e0!3m2!1sen!2sid!4v1696948553580!5m2!1sen!2sid"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
 
-                <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                </div>
+    </div>
+  </div>
+</div>
+<!-- Contact Section End -->
 
-                <div class="col-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                </div>
+<style>
+  /* Remove any gaps between the left and right sections */
+  .contact-section {
+    width: 100%;
+    padding: 30px;
+  }
 
-                <div class="col-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-                </div>
+  /* Remove the gutters between columns */
+  .no-gutters {
+    margin: 0;
+    padding: 0;
+  }
 
-                <div class="col-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
+  .row.no-gutters {
+    margin-right: 0;
+    margin-left: 0;
+  }
 
-                  <button type="submit">Send Message</button>
-                </div>
+  /* Ensure the columns take equal width */
+  .col-lg-6 {
+    padding: 0;
+  }
 
-              </div>
-            </form>
-          </div><!-- End Contact Form -->
+  /* Custom styles for info items */
+  .info-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    max-width: 400px;
+    margin: 0 auto;
+  }
 
+  .info-item i {
+    font-size: 1.75rem;
+    color: #6c63ff;
+    margin-bottom: 8px;
+  }
+
+  .info-item h3 {
+    font-size: 1.1rem;
+    margin-bottom: 8px;
+  }
+
+  .info-item p {
+    margin: 0;
+    font-size: 0.9rem;
+  }
+</style>
         </div>
 
       </div>
@@ -1282,22 +1340,6 @@
 
   <footer id="footer" class="footer">
 
-    <div class="footer-newsletter">
-      <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col-lg-6">
-            <h4>Join Our Newsletter</h4>
-            <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
-            <form action="forms/newsletter.php" method="post" class="php-email-form">
-              <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your subscription request has been sent. Thank you!</div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <div class="container footer-top">
       <div class="row gy-4">
