Adding Rekomendasi Formasi & Diklat Page

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
               <li><a href="#">Pengumuman</a></li>
               <li><a href="#">Inpassing</a></li>
               <li><a href="#">Tata Cara Perhitungan Kebutuhan Jabatan Fungsional Pengawasan JPH</a></li>
-              <li><a href="#">Rekomendasi Formasi Jabatan Fungsional Pengawasan JPH</a></li>
-              <li><a href="#">Diklat</a></li>
+              <li><a href="rekomFormasi.html">Rekomendasi Formasi Jabatan Fungsional Pengawasan JPH</a></li>
+              <li><a href="diklat.html">Diklat</a></li>
             </ul>
           </li>
           <li><a href="#contact">Kontak</a></li>
