--- a/produk.html
+++ b/produk.html
@@ -62,8 +62,8 @@
               <li><a href="#">Pengumuman</a></li>
               <li><a href="#">Inpassing</a></li>
               <li><a href="#">Tata Cara Perhitungan Kebutuhan Jabatan</a></li>
-              <li><a href="#">Rekomendasi Formasi Jabatan</a></li>
-              <li><a href="#">Diklat</a></li>
+              <li><a href="rekomFormasi.html">Rekomendasi Formasi Jabatan</a></li>
+              <li><a href="diklat.html">Diklat</a></li>
             </ul>
           </li>
           <li><a href="#contact">Kontak</a></li>
