Fix Email | Contact & Footer

--- a/footer.html
+++ b/footer.html
@@ -26,7 +26,7 @@
             <i class="bi bi-twitter fs-3"></i>
           </div>
           <p class="bold text-large"><i class="bi bi-whatsapp icon-large"></i> +62811-8010-3146</p>
-          <p class="bold text-large"><i class="bi bi-envelope icon-large"></i> layanan@kemenag.go.id</p>
+          <p class="bold text-large"><i class="bi bi-envelope icon-large"></i> layanan@halal.go.id</p>
         </div>
         <div class="col-md-4">
           <h3 class="fw-bold">Hubungi Kami</h3>
