--- a/header.html
+++ b/header.html
@@ -24,8 +24,8 @@
           <ul>
             <li><a href="pengumuman.html">Pengumuman</a></li>
             <li><a href="inpassing.html">Inpassing</a></li>
-            <li><a href="tatacara.html">Tata Cara Perhitungan Kebutuhan Jabatan Fungsional Pengawasan JPH</a></li>
-            <li><a href="rekomendasi.html">Rekomendasi Formasi Jabatan Fungsional Pengawasan JPH</a></li>
+            <li><a href="hitung-kebutuhan-jabatan.html">Tata Cara Perhitungan Kebutuhan Jabatan Fungsional Pengawasan JPH</a></li>
+            <li><a href="rekomFormasi.html">Rekomendasi Formasi Jabatan Fungsional Pengawasan JPH</a></li>
             <li><a href="diklat.html">Diklat</a></li>
           </ul>
         </li>
