--- a/kontak.html
+++ b/kontak.html
@@ -145,7 +145,7 @@
                           <div class="info-item" data-aos="fade" data-aos-delay="300">
                             <i class="bi bi-envelope"></i>
                             <h3>Email</h3>
-                            <p>Email: layanan@kemenag.go.id</p>
+                            <p>Email: layanan@halal.go.id</p>
                           </div>
                         </div><!-- End Info Item -->
 
